--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.maven.test</groupId>
-    <artifactId>springboot1</artifactId>
+    <artifactId>springboot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <!-- 定义公共资源版本 -->
@@ -48,6 +48,14 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
+
+        <!--
+             <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.2.3</version>
+            </dependency>
+        -->
 
         <dependency>
             <groupId>log4j</groupId>
