--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!--Value，IOUtils类的依赖：通过commons-io来简化文件相关操作-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.3</version>
+        </dependency>
+
     </dependencies>
 
 
