--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- 上边引入 parent，因此 下边无需指定版本 -->
         <!-- 包含 mvc,aop 等jar资源 -->
         <dependency>
@@ -37,12 +43,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- logback -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
             <version>4.11</version>
         </dependency>
-
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -57,6 +63,7 @@
             </dependency>
         -->
 
+        <!-- log4j -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -70,9 +77,13 @@
             <version>2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.5.RELEASE</version>
+        </dependency>
+
     </dependencies>
-
-
 
     <build>
         <plugins>
