--- a/src/main/resources/application-mybatis-dev.yml
+++ b/src/main/resources/application-mybatis-dev.yml
@@ -7,6 +7,7 @@ spring:
     password: root
     url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource #导入druid依赖
 
 #整合MyBatis的核心依赖MyBatis-Spring-Boot-Starter提供：
 #自动检测现有的DataSource
@@ -32,5 +33,11 @@ mybatis:
 logging:
   level:
     com:
-      maven:
-        mybatis: debug
+      maven: debug
+
+mybatis-plus:
+  global-config:
+    db-config:
+      db-type: MYSQL
+      capital-mode: false #开启大写命名
+      column-like: true #开启 LIKE 查询
